// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieCard rendering 1`] = `
<article
  className="small-movie-card catalog__movies-card"
  onClick={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="small-movie-card__image"
  >
    <img
      alt="Fantastic Beasts: The Crimes of Grindelwald"
      height="175"
      src="img/fantastic-beasts-the-crimes-of-grindelwald.jpg"
      width="280"
    />
  </div>
  <h3
    className="small-movie-card__title"
  >
    <a
      className="small-movie-card__link"
      href="movie-page.html"
      onClick={[Function]}
    >
      Fantastic Beasts: The Crimes of Grindelwald
    </a>
  </h3>
</article>
`;

exports[`MovieCard rendering 2`] = `
<article
  className="small-movie-card catalog__movies-card"
  onClick={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="small-movie-card__image"
  >
    <img
      alt="Bohemian Rhapsody"
      height="175"
      src="img/bohemian-rhapsody.jpg"
      width="280"
    />
  </div>
  <h3
    className="small-movie-card__title"
  >
    <a
      className="small-movie-card__link"
      href="movie-page.html"
      onClick={[Function]}
    >
      Bohemian Rhapsody
    </a>
  </h3>
</article>
`;

exports[`MovieCard rendering 3`] = `
<article
  className="small-movie-card catalog__movies-card"
  onClick={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="small-movie-card__image"
  >
    <img
      alt="Macbeth"
      height="175"
      src="img/macbeth.jpg"
      width="280"
    />
  </div>
  <h3
    className="small-movie-card__title"
  >
    <a
      className="small-movie-card__link"
      href="movie-page.html"
      onClick={[Function]}
    >
      Macbeth
    </a>
  </h3>
</article>
`;

exports[`MovieCard rendering 4`] = `
<article
  className="small-movie-card catalog__movies-card"
  onClick={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="small-movie-card__image"
  >
    <img
      alt="Aviator"
      height="175"
      src="img/aviator.jpg"
      width="280"
    />
  </div>
  <h3
    className="small-movie-card__title"
  >
    <a
      className="small-movie-card__link"
      href="movie-page.html"
      onClick={[Function]}
    >
      Aviator
    </a>
  </h3>
</article>
`;

exports[`MovieCard rendering 5`] = `
<article
  className="small-movie-card catalog__movies-card"
  onClick={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="small-movie-card__image"
  >
    <img
      alt="We need to talk about Kevin"
      height="175"
      src="img/we-need-to-talk-about-kevin.jpg"
      width="280"
    />
  </div>
  <h3
    className="small-movie-card__title"
  >
    <a
      className="small-movie-card__link"
      href="movie-page.html"
      onClick={[Function]}
    >
      We need to talk about Kevin
    </a>
  </h3>
</article>
`;

exports[`MovieCard rendering 6`] = `
<article
  className="small-movie-card catalog__movies-card"
  onClick={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="small-movie-card__image"
  >
    <img
      alt="Snatch"
      height="175"
      src="img/snatch.jpg"
      width="280"
    />
  </div>
  <h3
    className="small-movie-card__title"
  >
    <a
      className="small-movie-card__link"
      href="movie-page.html"
      onClick={[Function]}
    >
      Snatch
    </a>
  </h3>
</article>
`;

exports[`MovieCard rendering 7`] = `
<article
  className="small-movie-card catalog__movies-card"
  onClick={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="small-movie-card__image"
  >
    <img
      alt="Revenant"
      height="175"
      src="img/revenant.jpg"
      width="280"
    />
  </div>
  <h3
    className="small-movie-card__title"
  >
    <a
      className="small-movie-card__link"
      href="movie-page.html"
      onClick={[Function]}
    >
      Revenant
    </a>
  </h3>
</article>
`;

exports[`MovieCard rendering 8`] = `
<article
  className="small-movie-card catalog__movies-card"
  onClick={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="small-movie-card__image"
  >
    <img
      alt="Johnny English"
      height="175"
      src="img/johnny-english.jpg"
      width="280"
    />
  </div>
  <h3
    className="small-movie-card__title"
  >
    <a
      className="small-movie-card__link"
      href="movie-page.html"
      onClick={[Function]}
    >
      Johnny English
    </a>
  </h3>
</article>
`;
